# agentic-medical-graph-rag

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
config/: models.yaml  params.yaml
data/raw/: drug_interactions.json
notebooks/: agentic_graph_rag.ipynb  cypher_fundamentals.ipynb  knowledge_graph_and_etl.ipynb
scripts/: init_graph.py  seed_graph.py
utils/: __init__.py  config.py  llm_services.py  neo4j_client.py  prompts.py
