[project]
name = "agentic-medical-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "loguru>=0.7.3",
    "neo4j>=6.1.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
]
